# intelligent-transport-system

./: .gitignore  README.md  novelties.md  pyproject.toml  todo.txt
backend/: server.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/pipeline/: page.tsx
frontend/components/: app-sidebar.tsx
frontend/components/pipeline/: log-terminal.tsx  pipeline-card.tsx
frontend/components/simulation/: fpga-benchmark-section.tsx  signal-control-section.tsx  slam-section.tsx  traffic-section.tsx
frontend/components/ui/: animated-words.tsx  lenis-scroll.tsx  rainbow-button.tsx  select.tsx  sidebar.tsx
frontend/components/visualization/: av-scene.tsx  bounding-boxes.tsx  camera-feed.tsx  ground-plane.tsx  metrics-panel.tsx  playback-bar.tsx  point-cloud.tsx  stream-panel.tsx  trajectory-line.tsx  vehicle-model.tsx
frontend/hooks/: use-pipeline-ws.ts  use-playback.ts  use-scene-data.ts
frontend/public/data/kitti/: manifest.json  (+1 more)
output/: occupancy_grid.npy  timing_results.json  trajectory.npy
pynq_slam/: benchmark.py  parse_carmen.py  preprocess.py  slam_cpu_baseline.py  slam_fpga.py
pynq_slam/output/: timing_results.json  trajectory.npy
scripts/: generate_scene.py  preprocess_kitti.py
simulation/sumo/: carmen_writer.py  edges.edg.xml  network.net.xml  nodes.nod.xml  routes.rou.xml  run_sumo.py  simulation.sumocfg
simulation/uxsim/: adaptive_signal_dql.py  fixed_signal.py  intersection_sim.py
simulation/uxsim/output/: fixed_metrics.csv  metrics.csv
(+5 files in other folders)
